fix jump thumbnail

--- a/webapp/finder/find/theme/styles/timeline/timeline.css
+++ b/webapp/finder/find/theme/styles/timeline/timeline.css
@@ -481,7 +481,7 @@ padding-top: 1px;
 	z-index:5;
 }
 
-#timelineviewerbackground { position:absolute; width:calc(100% - 40px); height: 100%; top:0; z-index:5;}
+#timelineviewerbackground { position:absolute; margin-top:90px; width:calc(100% - 40px); height: 100%; top:0; z-index:5;}
 
 
 .cctimelinedata {
